@@ -45,8 +45,8 @@ import com.badlogic.gdx.utils.GdxRuntimeException;
  * 
  * @author mzechner */
 public class IndexBufferObjectSubData implements IndexData {
-	ShortBuffer buffer;
-	ByteBuffer byteBuffer;
+	final ShortBuffer buffer;
+	final ByteBuffer byteBuffer;
 	int bufferHandle;
 	final boolean isDirect;
 	boolean isDirty = true;
@@ -136,6 +136,21 @@ public class IndexBufferObjectSubData implements IndexData {
 		byteBuffer.position(0);
 		byteBuffer.limit(buffer.limit() << 1);
 		
+		if (isBound) {
+			Gdx.gl20.glBufferSubData(GL20.GL_ELEMENT_ARRAY_BUFFER, 0, byteBuffer.limit(), byteBuffer);
+			isDirty = false;
+		}
+	}
+
+	@Override
+	public void updateIndices (int targetOffset, short[] indices, int offset, int count) {
+		isDirty = true;
+		final int pos = byteBuffer.position();
+		byteBuffer.position(targetOffset * 2);
+		BufferUtils.copy(indices, offset, byteBuffer, count);
+		byteBuffer.position(pos);
+		buffer.position(0);
+
 		if (isBound) {
 			Gdx.gl20.glBufferSubData(GL20.GL_ELEMENT_ARRAY_BUFFER, 0, byteBuffer.limit(), byteBuffer);
 			isDirty = false;
